force-app/main/default/objects/Reconciliation_Run__c/Reconciliation_Run__c.object-meta.xml
<CustomObject>
    <label>Reconciliation Run</label>
    <pluralLabel>Reconciliation Runs</pluralLabel>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Reconciliation Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Resultado de una conciliación diaria plataforma vs Salesforce.</description>
</CustomObject>