force-app/main/default/objects/Reconciliation_Run__c/fields/Missing_Count__c.field-meta.xml
<CustomField>
    <fullName>Missing_Count__c</fullName>
    <label>Missing Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>