force-app/main/default/objects/Reconciliation_Run__c/fields/Missing_References__c.field-meta.xml
<CustomField>
    <fullName>Missing_References__c</fullName>
    <label>Missing References</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>