force-app/main/default/objects/Reconciliation_Run__c/fields/Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Date__c</fullName>
    <label>Sales Date</label>
    <type>Date</type>
</CustomField>