force-app/main/default/objects/Reconciliation_Run__c/fields/Salesforce_Count__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Count__c</fullName>
    <label>Salesforce Count</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>